openshift/sno/apps/infra/netbox/app/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: netbox-route
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-production
spec:
  host: "netbox.${SECRET_DOMAIN}"
  to:
    kind: Service
    name: netbox
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
